# extended-rust-sdk

./: Cargo.toml  README.md
examples/: onboarding.rs  place_limit_order.rs  stream_orderbook.rs
src/: amounts.rs  config.rs  error.rs  lib.rs  order_builder.rs  order_settlement.rs  transfer_builder.rs  withdrawal_builder.rs
src/http/: client.rs  mod.rs  response.rs
src/orderbook/: mod.rs
src/stream/: connection.rs  mod.rs
src/trading_client/: account_module.rs  info_module.rs  markets_module.rs  mod.rs  order_management.rs  testnet_module.rs  url_builder.rs
src/types/: account.rs  asset.rs  balance.rs  bridge.rs  candle.rs  client.rs  common.rs  config.rs  enums.rs  fee.rs  funding.rs  market.rs  mod.rs  order.rs  orderbook.rs  position.rs  trade.rs  transfer.rs  withdrawal.rs
src/user_client/: mod.rs  onboarding.rs
src/utils/: nonce.rs  time.rs
tests/: test_order_object.rs  test_orderbook.rs
