[package]
name = "extended-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crypto
rust-crypto-lib-base = { git = "https://github.com/x10xchange/rust-crypto-lib-base" }
starknet-crypto = "0.8"

# HTTP + async
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Error handling
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
url = "2"
hex = "0.4"
num-bigint = "0.4"
sha2 = "0.10"

# Ethereum (for UserClient onboarding)
alloy-signer = "1"
alloy-signer-local = "1"
alloy-sol-types = "1"
alloy-primitives = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
pretty_assertions = "1"
